Update valgrind-azure-pipelines.yml for Azure Pipelines

--- a/pipelines/valgrind-azure-pipelines.yml
+++ b/pipelines/valgrind-azure-pipelines.yml
@@ -67,7 +67,7 @@ stages:
             displayName: Install dependencies
           - script: |
               make build-so
-            workingDirectory: 
+            workingDirectory: $(workingDirectory)
             displayName: Make build-so
           - task: PublishPipelineArtifact@1
             inputs:
