Removed lodepng.so, small refactor
and added error handling for errorMessage

--- a/CIFFCAFFParser/makefile
+++ b/CIFFCAFFParser/makefile
@@ -1,7 +1,7 @@
 CC = g++ -std=c++11
 CFLAGS = -shared -fPIC
 WINFLAG = -DBUILD_DLL
-SOURCE = CAFFHandler.cpp Logger.cpp CIFFHandler.cpp BytesToIntConverter.cpp ParserExceptions.cpp lodepng.cpp
+SOURCE = CAFFHandler.cpp Logger.cpp CIFFHandler.cpp BytesToIntConverter.cpp ParserExceptions.cpp
 
 check: Main.exe
 	valgrind --leak-check=full --error-exitcode=1 ./Main.exe
