Update backend-azure-pipelines.yml for Azure Pipelines

--- a/pipelines/backend-azure-pipelines.yml
+++ b/pipelines/backend-azure-pipelines.yml
@@ -35,7 +35,7 @@ stages:
               extraProperties: |
                 sonar.projectBaseDir=$(workingDirectory)
                 sonar.exclusions=CaffStore.Backend.Api/Migrations/**/*
-                sonar.cs.opencover.reportsPaths=CaffStore.Backend.Test/coverage.opencover.xml
+                sonar.cs.opencover.reportsPaths=**/coverage.opencover.xml
                 sonar.coverage.exclusions=**Test*.cs
           - task: UseDotNet@2
             inputs:
