Fix sonar security warning

--- a/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Development.json
+++ b/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Development.json
@@ -12,5 +12,9 @@
 	"SwaggerGenOptions": {
 		"ServerUri": "http://localhost:55499",
 		"TokenUri": "http://localhost:55499/connect/token"
+	},
+	"AdminUserOptions": {
+		"DefaultAdminUserEmail": "admin@admin",
+		"DefaultAdminUserPassword": "Admin1234"
 	}
 }
