--- a/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Production.json
+++ b/CaffStore.Backend/CaffStore.Backend.Api/appsettings.Production.json
@@ -19,10 +19,14 @@
 		"StorageAccountKey": "<Set by KeyVault>",
 		"PreviewContainerName": "previews",
 		"CaffContainerName": "caffs",
-		"SasTokenLifetimeSeconds": 180 
+		"SasTokenLifetimeSeconds": 180
 	},
 	"SwaggerGenOptions": {
 		"ServerUri": "https://api-caffly.azurewebsites.net",
 		"TokenUri": "https://api-caffly.azurewebsites.net/connect/token"
+	},
+	"AdminUserOptions": {
+		"DefaultAdminUserEmail": "admin@admin",
+		"DefaultAdminUserPassword": "Admin1234"
 	}
 }
